Edited section agree (fixed things that didn not saw at the beginning) on mobile size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -703,8 +703,7 @@ footer {
         display: block;
         margin: 0px auto;
         font-size: 18px;
-        width: 233px;
-        height: 54px; }
+        max-width: 233px; }
       .agree_container_1 button {
         margin-top: 30px; }
       .agree_container_2 {
@@ -713,8 +712,8 @@ footer {
           display: block;
           margin: 0px auto;
           font-size: 18px;
-          width: 233px;
-          height: 54px; }
+          max-width: 280px;
+          max-height: 54px; }
         .agree_container_2 button {
           margin-top: 30px; }
 
