--- a/assets/sass/_media.sass
+++ b/assets/sass/_media.sass
@@ -435,8 +435,9 @@
                display: block
                margin: 0px auto
                font-size: 18px
-               width: 233px
-               height: 54px
+               max-width: 233px
+               // // height: 54px
+               // max-height: 25px
             button
                margin-top: 30px
          &_2
@@ -445,8 +446,8 @@
                display: block
                margin: 0px auto
                font-size: 18px
-               width: 233px
-               height: 54px
+               max-width: 280px
+               max-height: 54px
             button
                margin-top: 30px
 
